<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Identificador" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/idtxtPedirUsuario2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/idtxtusuario"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/idetUsuario2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/idtxtusuario"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/idtxtPedirContrasenna2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/idtxtContrasenna"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/idedtContrasenna2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/idtxtContrasenna"
            android:inputType="textPassword" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.56">

        <Button
            android:id="@+id/idbtnAceptar"
            android:layout_width="145dp"
            android:layout_height="63dp"
            android:text="@string/idbtAceptar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.131"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.145" />

        <Button
            android:id="@+id/idbtCrearUsuario"
            android:layout_width="156dp"
            android:layout_height="71dp"
            android:text="@string/idbtCrearUsuario"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.818"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.873" />

        <TextView
            android:id="@+id/idtxtOpcionCrearUsuario"
            android:layout_width="196dp"
            android:layout_height="32dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/idtxtCrearUsuario"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.874"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.497" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>